# simp3

./: .env  Cargo.toml  README.md  diesel.toml  plans.md
.github/workflows/: rust.yml
migrations/2024-07-17-181020_create_user/: down.sql  up.sql
migrations/2025-01-12-100011_create_user/: up.sql
src/: client.rs  command.rs  db_model.rs  dict.txt  main.rs  net.rs  old.rs  schema.rs  server.rs  types.rs  util.rs  welcome.txt
src/config/: early_kick.txt  help.txt  version.txt  welcome.txt
src/config/kick/: name_exists.txt
src/server/: db_model.rs
