[package]
name = "simp3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stcp = { git = "https://github.com/vivyir/stcp", rev = "8a4b951" }
aes-gcm = "0.10"
bincode = "1.3"
colored = "2.0.0"
[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",                # Lets you generate random UUIDs
]
